parser/MiniJavaGrammarParser.py
# Generated from MiniJavaGrammar.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniJavaGrammarParser ( Parser ):

    grammarFileName = "MiniJavaGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'}'", "'public'", "'static'", 
                     "'void'", "'main'", "'String'", "'...'", "','", "'int'", 
                     "'boolean'", "'char'", "'do'", "'while'", "'break'", 
                     "'continue'", "'System.out.println'", "'if'", "'else'", 
                     "'.length'", "'.charAt'", "'.'", "'new'", "'this'", 
                     "'/'", "'||'", "'>'", "'&&'", "'<'", "'+'", "'-'", 
                     "'*'", "'!'", "'['", "']'", "'('", "')'", "'return'", 
                     "'='", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "DIV", "OR", "GT", "AND", 
                      "LT", "PLUS", "MINUS", "TIMES", "NOT", "LSB", "RSB", 
                      "LP", "RP", "RETURN", "EQ", "BooleanLiteral", "SC", 
                      "Identifier", "WS", "MULTILINE_COMMENT", "LINE_COMMENT", 
                      "STRING", "CHAR", "IntegerLiteral" ]

    RULE_startRule = 0
    RULE_mainClass = 1
    RULE_mainMethod = 2
    RULE_classDeclaration = 3
    RULE_parameter = 4
    RULE_fieldDeclaration = 5
    RULE_localDeclaration = 6
    RULE_methodDeclaration = 7
    RULE_parameterList = 8
    RULE_methodBody = 9
    RULE_type = 10
    RULE_identifier = 11
    RULE_statement = 12
    RULE_doWhileStatement = 13
    RULE_breakStatement = 14
    RULE_continueStatement = 15
    RULE_arrayAssignmentStatement = 16
    RULE_variableAssignmentStatement = 17
    RULE_printStatement = 18
    RULE_whileStatement = 19
    RULE_ifElseStatement = 20
    RULE_nestedStatement = 21
    RULE_returnStatement = 22
    RULE_methodCallStatement = 23
    RULE_expression = 24
    RULE_methodCallParams = 25

    ruleNames =  [ "startRule", "mainClass", "mainMethod", "classDeclaration", 
                   "parameter", "fieldDeclaration", "localDeclaration", 
                   "methodDeclaration", "parameterList", "methodBody", "type", 
                   "identifier", "statement", "doWhileStatement", "breakStatement", 
                   "continueStatement", "arrayAssignmentStatement", "variableAssignmentStatement", 
                   "printStatement", "whileStatement", "ifElseStatement", 
                   "nestedStatement", "returnStatement", "methodCallStatement", 
                   "expression", "methodCallParams" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    DIV=26
    OR=27
    GT=28
    AND=29
    LT=30
    PLUS=31
    MINUS=32
    TIMES=33
    NOT=34
    LSB=35
    RSB=36
    LP=37
    RP=38
    RETURN=39
    EQ=40
    BooleanLiteral=41
    SC=42
    Identifier=43
    WS=44
    MULTILINE_COMMENT=45
    LINE_COMMENT=46
    STRING=47
    CHAR=48
    IntegerLiteral=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartRuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.MainClassContext,0)


        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaGrammarParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaGrammarParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_startRule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartRule" ):
                return visitor.visitStartRule(self)
            else:
                return visitor.visitChildren(self)




    def startRule(self):

        localctx = MiniJavaGrammarParser.StartRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_startRule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.mainClass()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 53
                self.classDeclaration()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.IdentifierContext,0)


        def mainMethod(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.MainMethodContext,0)


        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_mainClass

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainClass" ):
                return visitor.visitMainClass(self)
            else:
                return visitor.visitChildren(self)




    def mainClass(self):

        localctx = MiniJavaGrammarParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(MiniJavaGrammarParser.T__0)
            self.state = 60
            self.identifier()
            self.state = 61
            self.match(MiniJavaGrammarParser.T__1)
            self.state = 62
            self.mainMethod()
            self.state = 63
            self.match(MiniJavaGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MiniJavaGrammarParser.LP, 0)

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.IdentifierContext,0)


        def RP(self):
            return self.getToken(MiniJavaGrammarParser.RP, 0)

        def LSB(self):
            return self.getToken(MiniJavaGrammarParser.LSB, 0)

        def RSB(self):
            return self.getToken(MiniJavaGrammarParser.RSB, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaGrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_mainMethod

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainMethod" ):
                return visitor.visitMainMethod(self)
            else:
                return visitor.visitChildren(self)




    def mainMethod(self):

        localctx = MiniJavaGrammarParser.MainMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mainMethod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(MiniJavaGrammarParser.T__3)
            self.state = 66
            self.match(MiniJavaGrammarParser.T__4)
            self.state = 67
            self.match(MiniJavaGrammarParser.T__5)
            self.state = 68
            self.match(MiniJavaGrammarParser.T__6)
            self.state = 69
            self.match(MiniJavaGrammarParser.LP)
            self.state = 70
            self.match(MiniJavaGrammarParser.T__7)
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35]:
                self.state = 71
                self.match(MiniJavaGrammarParser.LSB)
                self.state = 72
                self.match(MiniJavaGrammarParser.RSB)
                pass
            elif token in [9]:
                self.state = 73
                self.match(MiniJavaGrammarParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 76
            self.identifier()
            self.state = 77
            self.match(MiniJavaGrammarParser.RP)
            self.state = 78
            self.match(MiniJavaGrammarParser.T__1)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.statement()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 996868403216388) != 0)):
                    break

            self.state = 84
            self.match(MiniJavaGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.IdentifierContext,0)


        def fieldDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaGrammarParser.FieldDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaGrammarParser.FieldDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaGrammarParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaGrammarParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_classDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = MiniJavaGrammarParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(MiniJavaGrammarParser.T__0)
            self.state = 87
            self.identifier()
            self.state = 88
            self.match(MiniJavaGrammarParser.T__1)
            self.state = 92
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 89
                    self.fieldDeclaration() 
                self.state = 94
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8796093036880) != 0):
                self.state = 95
                self.methodDeclaration()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(MiniJavaGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.IdentifierContext,0)


        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = MiniJavaGrammarParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.type_()
            self.state = 104
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.IdentifierContext,0)


        def SC(self):
            return self.getToken(MiniJavaGrammarParser.SC, 0)

        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_fieldDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFieldDeclaration" ):
                return visitor.visitFieldDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def fieldDeclaration(self):

        localctx = MiniJavaGrammarParser.FieldDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fieldDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.type_()
            self.state = 107
            self.identifier()
            self.state = 108
            self.match(MiniJavaGrammarParser.SC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.IdentifierContext,0)


        def SC(self):
            return self.getToken(MiniJavaGrammarParser.SC, 0)

        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_localDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocalDeclaration" ):
                return visitor.visitLocalDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def localDeclaration(self):

        localctx = MiniJavaGrammarParser.LocalDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_localDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.type_()
            self.state = 111
            self.identifier()
            self.state = 112
            self.match(MiniJavaGrammarParser.SC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.IdentifierContext,0)


        def LP(self):
            return self.getToken(MiniJavaGrammarParser.LP, 0)

        def RP(self):
            return self.getToken(MiniJavaGrammarParser.RP, 0)

        def methodBody(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.MethodBodyContext,0)


        def type_(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.TypeContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.ParameterListContext,0)


        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_methodDeclaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = MiniJavaGrammarParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 114
                self.match(MiniJavaGrammarParser.T__3)


            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 11, 12, 13, 43]:
                self.state = 117
                self.type_()
                pass
            elif token in [6]:
                self.state = 118
                self.match(MiniJavaGrammarParser.T__5)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 121
            self.identifier()
            self.state = 122
            self.match(MiniJavaGrammarParser.LP)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8796093036800) != 0):
                self.state = 123
                self.parameterList()


            self.state = 126
            self.match(MiniJavaGrammarParser.RP)
            self.state = 127
            self.match(MiniJavaGrammarParser.T__1)
            self.state = 128
            self.methodBody()
            self.state = 129
            self.match(MiniJavaGrammarParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaGrammarParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MiniJavaGrammarParser.ParameterContext,i)


        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_parameterList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = MiniJavaGrammarParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.parameter()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==10:
                self.state = 132
                self.match(MiniJavaGrammarParser.T__9)
                self.state = 133
                self.parameter()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def localDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaGrammarParser.LocalDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaGrammarParser.LocalDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaGrammarParser.StatementContext,i)


        def returnStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_methodBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodBody" ):
                return visitor.visitMethodBody(self)
            else:
                return visitor.visitChildren(self)




    def methodBody(self):

        localctx = MiniJavaGrammarParser.MethodBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_methodBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 139
                    self.localDeclaration() 
                self.state = 144
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 145
                    self.statement() 
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==39:
                self.state = 151
                self.returnStatement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(MiniJavaGrammarParser.LSB, 0)

        def RSB(self):
            return self.getToken(MiniJavaGrammarParser.RSB, 0)

        def identifier(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.IdentifierContext,0)


        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = MiniJavaGrammarParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(MiniJavaGrammarParser.T__10)
                self.state = 155
                self.match(MiniJavaGrammarParser.LSB)
                self.state = 156
                self.match(MiniJavaGrammarParser.RSB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(MiniJavaGrammarParser.T__11)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 158
                self.match(MiniJavaGrammarParser.T__10)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 159
                self.match(MiniJavaGrammarParser.T__12)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 160
                self.match(MiniJavaGrammarParser.T__7)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 161
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(MiniJavaGrammarParser.Identifier, 0)

        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_identifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = MiniJavaGrammarParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(MiniJavaGrammarParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nestedStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.NestedStatementContext,0)


        def ifElseStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.IfElseStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.DoWhileStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.PrintStatementContext,0)


        def variableAssignmentStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.VariableAssignmentStatementContext,0)


        def arrayAssignmentStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.ArrayAssignmentStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.ContinueStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.BreakStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.ReturnStatementContext,0)


        def methodCallStatement(self):
            return self.getTypedRuleContext(MiniJavaGrammarParser.MethodCallStatementContext,0)


        def getRuleIndex(self):
            return MiniJavaGrammarParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiniJavaGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statement)
        try:
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.nestedStatement()
                pass
